# sync_lidar

./: CMakeLists.txt  README.md  package.xml
launch/: sync_lidar.launch  sync_lidar_simu.launch
rviz/: sync_lidar.rviz
src/: sync_lidar.cpp
